fixed find/license font sizes, shouldn't wrap and break things any  more. index tagline coloured as per request (not thrilled with the red. green would probably work better)

--- a/cc3/style.css
+++ b/cc3/style.css
@@ -37,6 +37,7 @@ body {
     margin: 0 auto;
     padding: 18px 0 2px 0px;
     text-align: left;
+    font-size: 11px !important;
   }
     #cc-title {
     padding: 0 0px 5px 0px;
@@ -55,7 +56,7 @@ body {
       font-size: 170%;
       
       background-color: /*#0f2700*/ #fff;
-      color: #909090;
+      color: #707070;
       margin: 7px 0 3px 0;
 			padding-bottom:  16px;
     }
@@ -270,6 +271,10 @@ a.cc-actions:hover {
 
 #splash img {
   padding-right: 15px;
+}
+
+#splash h2.tagline { 
+  color: #92534e;
 }
 
 #splash-menu h3 {
